--- a/AppointmentManagementSystem.Server/AppointmentManagementSystem.Server.csproj
+++ b/AppointmentManagementSystem.Server/AppointmentManagementSystem.Server.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Mysql.Data" Version="8.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
