--- a/AppointmentManagementSystem.Server/appsettings.json
+++ b/AppointmentManagementSystem.Server/appsettings.json
@@ -6,4 +6,8 @@
     }
   },
   "AllowedHosts": "*"
+,
+"ConnectionStrings": {
+  "DefaultConnection": "Server=${DB_SERVER};Database=${DB_DATABASE};User=${DB_USER};Password=${DB_PASSWORD};"
+}
 }
