--- a/appointmentmanagementsystem.client/package.json
+++ b/appointmentmanagementsystem.client/package.json
@@ -23,7 +23,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jest-editor-support": "*",
+    "mysql": "^2.18.1",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
