"Added MySQL database connection and Entity Framework Core to server project, updated appsettings.json with connection string, and modified client-side code to include user registration and service"

--- a/AppointmentManagementSystem.Server/AppointmentManagementSystem.Server.csproj
+++ b/AppointmentManagementSystem.Server/AppointmentManagementSystem.Server.csproj
@@ -22,5 +22,10 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  
+  <ItemGroup>
+  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1" />
+</ItemGroup>
 
 </Project>
