--- a/AppointmentManagementSystem.Server/appsettings.json
+++ b/AppointmentManagementSystem.Server/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*"
 ,
-"ConnectionStrings": {
-  "DefaultConnection": "Server=${DB_SERVER};Database=${DB_DATABASE};User=${DB_USER};Password=${DB_PASSWORD};"
-}
+ "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MiBaseDeDatos;User=root;Password=tu_contraseña;"
+  }
+
 }
