--- a/AppointmentManagementSystem.Server/appsettings.json
+++ b/AppointmentManagementSystem.Server/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*"
 ,
- "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MiBaseDeDatos;User=root;Password=tu_contraseña;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=appms_bd;User=root;Password=;"
   }
-
 }
