--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ $RECYCLE.BIN/
 # Rider and VSCode shared index
 .idea/.idea.icls
 AppointmentManagementSystem.Server/.env
+# Node modules
+node_modules
